--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -167,7 +167,7 @@ We reported results from eleven experiments. In first set of experiments, we fou
 \hypertarget{disclosures}{%
 \section{Disclosures}\label{disclosures}}
 
-We reported all the measurements, analyses, and results in all the experiments in the current study. Participants whose overall accuracy lower than 60\% were excluded from analysis. Also, the accurate responses with less than 200ms reaction times were excluded from the analysis. To have a better overview of the effect reported in this series experiment, we reported the synthesized results in the main text and individual experiment in supplementary materials.
+We reported all the measurements, analyses, and results in all the experiments in the current study. Participants whose overall accuracy lower than 60\% were excluded from analysis. Also, the accurate responses with less than 200ms reaction times were excluded from the analysis.
 
 All the experiments reported were not pre-registered. Most experiments (1a \textasciitilde{} 6b, except experiment 3b) reported in the current study were first finished between 2014 to 2016 in Tsinghua University, Beijing, China. Participants in these experiments were recruited in the local community. To increase the sample size of experiments to 50 or more (Simmons, Nelson, \& Simonsohn, 2013), we recruited additional participants in Wenzhou University, Wenzhou, China in 2017 for experiment 1a, 1b, 4a, and 4b. Experiment 3b was finished in Wenzhou University in 2017. To have a better estimation of the effect size, we included the data from two experiments (experiment 7a, 7b) that were reported in Hu, Lan, Macrae, and Sui (2020) (See Table S1 for overview of these experiments).
 
@@ -482,8 +482,8 @@ Figure \ref{fig:ex1b-dprime-rt} shows \emph{d} prime and reaction times of exper
 
 Repeated measures ANOVA revealed main effect of valence, \(F(1.83, 93.20) = 14.98\), \(\mathit{MSE} = 0.18\), \(p < .001\), \(\hat{\eta}^2_G = .053\). Paired t test showed that the Good-Person condition (1.87 \(\pm\) 0.102) was with greater \emph{d} prime than Neutral condition (1.44 \(\pm\) 0.101, \emph{t}(51) = 5.945, \emph{p} \textless{} 0.001). We also found that the Bad-Person condition (1.67 \(\pm\) 0.11) has also greater \emph{d} prime than neutral condition , \emph{t}(51) = 3.132, \emph{p} = 0.008). There Good-person condition was also slightly greater than the bad condition, \emph{t}(51) = 2.265, \emph{p} = 0.0701.
 
-\hypertarget{reaction-time}{%
-\subparagraph{Reaction time}\label{reaction-time}}
+\hypertarget{reaction-times-2}{%
+\subparagraph{Reaction times}\label{reaction-times-2}}
 
 We found interaction between Matchness and Valence (\(F(1.95, 99.31) = 19.71\), \(\mathit{MSE} = 960.92\), \(p < .001\), \(\hat{\eta}^2_G = .031\)) and then analyzed the matched trials and mismatched trials separately, as in experiment 1a. For matched trials, we found the effect of valence \(F(1.94, 99.10) = 33.97\), \(\mathit{MSE} = 1,343.19\), \(p < .001\), \(\hat{\eta}^2_G = .115\). Post-hoc \emph{t}-tests revealed that shapes associated with Good Person (684 \(\pm\) 8.77) were responded faster than Neutral-Person (740 \(\pm\) 9.84), (\emph{t}(51) = -8.167, \emph{p} \textless{} 0.001) and Bad Person (728 \(\pm\) 9.15), \emph{t}(51) = -5.724, \emph{p} \textless{} 0.0001). While there was no significant differences between Neutral and Bad-Person condition (\emph{t}(51) = 1.686, \emph{p} = 0.221). For non-matched trials, there was no significant effect of Valence (\(F(1.90, 97.13) = 1.80\), \(\mathit{MSE} = 430.15\), \(p = .173\), \(\hat{\eta}^2_G = .003\)).
 
@@ -497,8 +497,8 @@ We fitted a Bayesian hierarchical GLM for SDT. The results showed that when the 
 
 Interesting, we also found the criteria for three conditions also differ, the shapes tagged with good person has the highest criteria (-1.01, {[}-1.14 -0.88{]}), followed by shapes tagged with neutral person(1.06, {[}-1.21 -0.92{]}), and then the shapes tagged with bad person(-1.11, {[}-1.25 -0.97{]}). However, pair-wise comparison showed that only showed strong evidence for the difference between good and bad conditions.
 
-\hypertarget{reaction-time-1}{%
-\subparagraph{Reaction time}\label{reaction-time-1}}
+\hypertarget{reaction-time}{%
+\subparagraph{Reaction time}\label{reaction-time}}
 
 \begin{figure}
 \centering
@@ -573,8 +573,8 @@ We fitted a Bayesian hierarchical GLM for SDT. The results showed that when the 
 
 Interesting, we also found the criteria for three conditions also differ, the shapes tagged with good person has the highest criteria (-0.97, {[}-1.12 -0.82{]}), followed by shapes tagged with neutral person(-0.96, {[}-1.09 -0.83{]}), and then the shapes tagged with bad person(-1.03, {[}-1.22 -0.84{]}). However, pair-wise comparison showed that only showed strong evidence for the difference between good and bad conditions.
 
-\hypertarget{reaction-time-2}{%
-\paragraph{Reaction time}\label{reaction-time-2}}
+\hypertarget{reaction-time-1}{%
+\paragraph{Reaction time}\label{reaction-time-1}}
 
 We fitted a Bayesian hierarchical GLM for RTs, with a log-normal distribution as the link function. We used the posterior distribution of the regression coefficient to make statistical inferences. As in previous studies, the matched conditions are much faster than the mismatched trials (\(P_{PosteriorComparison} = .75\)). We focused on matched trials only, and compared different conditions: Good () is not faster than the neutral (), \(P_{PosteriorComparison} = .5\), it was faster than the Bad condition (), \(P_{PosteriorComparison} = .88\). And the neutral condition is faster than the bad condition, \(P_{PosteriorComparison} = .95\). However, the mismatched trials are largely overlapped.
 
@@ -638,8 +638,8 @@ Figure \ref{fig:ex2-dprime-rt} shows \emph{d} prime and reaction times of experi
 
 There was evidence for the main effect of valence, \(F(1.83, 60.36) = 14.41\), \(\mathit{MSE} = 0.23\), \(p < .001\), \(\hat{\eta}^2_G = .066\). Paired t test showed that the Good-Person condition (2.79 \(\pm\) 0.17) was with greater \emph{d} prime than Netural condition (2.21 \(\pm\) 0.16, \emph{t}(33) = 4.723, \emph{p} = 0.001) and Bad-person condition (2.41 \(\pm\) 0.14), \emph{t}(33) = 4.067, \emph{p} = 0.008). There was no-significant difference between Neutral-person and Bad-person conidition, \emph{t}(33) = -1,802, \emph{p} = 0.185.
 
-\hypertarget{reaction-time-3}{%
-\subparagraph{Reaction time}\label{reaction-time-3}}
+\hypertarget{reaction-time-2}{%
+\subparagraph{Reaction time}\label{reaction-time-2}}
 
 The results of reaction times of matchness trials showed similar pattern as the \emph{d} prime data.
 
@@ -655,8 +655,8 @@ We fitted a Bayesian hierarchical GLM for SDT. The results showed that when the 
 
 Interesting, we also found the criteria for three conditions also differ, the shapes tagged with good person has the highest criteria (-1.01, {[}-1.14 -0.88{]}), followed by shapes tagged with neutral person(1.06, {[}-1.21 -0.92{]}), and then the shapes tagged with bad person(-1.11, {[}-1.25 -0.97{]}). However, pair-wise comparison showed that only showed strong evidence for the difference between good and bad conditions.
 
-\hypertarget{reaction-times-2}{%
-\subparagraph{Reaction times}\label{reaction-times-2}}
+\hypertarget{reaction-times-3}{%
+\subparagraph{Reaction times}\label{reaction-times-3}}
 
 \begin{figure}
 \centering
@@ -684,8 +684,185 @@ We fitted our data with HDDM, using the response-coding (also see Hu et al., 202
 In this experiment, we repeated the results pattern that the positive moral valenced stimuli has an advantage over the neutral or the negative valence association. Moreover, with a cross-task analysis, we didn't found evidence that the experiment task interacted with moral valence, suggesting that the effect might not be effect by experiment task.
 These findings suggested that the facilitation effect of positive moral valence is robust and not affected by task. This robust effect detected by the associative learning is unexpected.
 
+\hypertarget{experiment-6a-eeg-study-1}{%
+\subsection{Experiment 6a: EEG study 1}\label{experiment-6a-eeg-study-1}}
+
+Experiment 6a was conducted to study the neural correlates of the positive prioritization effect. The behavioral paradigm is same as experiment 2.
+
+\hypertarget{method-3}{%
+\subsubsection{Method}\label{method-3}}
+
+\hypertarget{participants-4}{%
+\paragraph{Participants}\label{participants-4}}
+
+24 college students (8 female, age = 22.88 \(\pm\) 2.79) participated the current study, all of them were from Tsinghua University in 2014. Informed consent was obtained from all participants prior to the experiment according to procedures approved by a local ethics committee. No participant was excluded from behavioral analysis.
+
+\hypertarget{experimental-design}{%
+\subsubsection{Experimental design}\label{experimental-design}}
+
+The experimental design of this experiment is same as experiment 2: a 3 × 2 within-subject design with moral valence (good, neutral and bad associations) and matchness between shape and label (match vs.~mismatch for the personal association) as within-subject variables.
+
+\hypertarget{stimuli}{%
+\paragraph{Stimuli}\label{stimuli}}
+
+Three geometric shapes (triangle, square and circle, each 4.6º × 4.6º of visual angle) were presented at the center of screen for 50 ms after 500ms of fixation (0.8º × 0.8º of visual angle). The association of the three shapes to bad person (\enquote{坏人, HuaiRen}), good person (\enquote{好人, HaoRen}) or ordinary person (\enquote{常人, ChangRen}) was counterbalanced across participants. The words bad person, good person or ordinary person (3.6º × 1.6º) was also displayed at the center fo the screen. Participants had to judge whether the pairings of label and shape matched (e.g., Does the circle represent a bad person?). The experiment was run on a PC using E-prime software (version 2.0). These stimuli were displayed on a 22-in CRT monitor (1024×768 at 100Hz).
+We used backward masking to avoid over-processing of the moral words, in which a scrambled picture were presented for 900 ms after the label. Also, to avoid the ceiling effect on accuracy, shapes were presented on a noisy background based on our pilot studies. The noisy images were made by scrambling a picture of 3/4gray and ¼ white at resolution of 2 × 2 pixel.
+
+\hypertarget{procedure-4}{%
+\paragraph{Procedure}\label{procedure-4}}
+
+The procedure was similar to Experiment 2. Participants finished 9 blocks of trial, each with 120 trials. In total, participants finished 180 trials for each combination of condition.
+
+As in experiment 2 (Sui, He, \& Humphreys, 2012), subjects first learned the associations between labels and shapes and then completed a shape-label matching task (e.g., good person-triangle). In each trial of the matching task, a fixation were first presented for 500 ms, followed by a 50 ms label; then, a scrambled picture presented 900 ms. After the backward mask, the shape were presented on a noisy background for 50ms. Participant have to response in 1000ms after the presentation of the shape, and finally, a feedback screen was presented for 500 ms (see figure 1). The inter-trial interval (ITI) were randomly varied at the range of 1000 \textasciitilde{} 1400 ms.
+
+All the stimuli were presented on a gray background (RGB: 127, 127, 127). E-primed 2.0 was used to present stimuli and collect behavioral results. Data were collected and analyzed when accuracy performance in total reached 60\%.
+
+\hypertarget{data-analysis-5}{%
+\subsubsection{Data Analysis}\label{data-analysis-5}}
+
+Data was analyzed as in experiment 1a.
+
 \hypertarget{results-4}{%
-\section{Results}\label{results-4}}
+\subsubsection{Results}\label{results-4}}
+
+\hypertarget{nhst-2}{%
+\paragraph{NHST}\label{nhst-2}}
+
+\begin{figure}
+\centering
+\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/ex6a-dprime-rt-1.pdf}
+\caption{\label{fig:ex6a-dprime-rt}RT and \emph{d} prime of Experiment 6a.}
+\end{figure}
+
+Only the behavioral results were reported here. Figure \ref{fig:ex6a-dprime-rt} shows \emph{d} prime and reaction times of experiment 6a.
+
+\hypertarget{d-prime-3}{%
+\subparagraph{d prime}\label{d-prime-3}}
+
+We conducted repeated measures ANOVA, with moral valence as independent variable. The results revealed the main effect of valence (\(F(1.74, 40.05) = 3.76\), \(\mathit{MSE} = 0.10\), \(p = .037\), \(\hat{\eta}^2_G = .021\)). Post-hoc analysis revealed that shapes link with Good person (mean = 3.13, SE = 0.109) is greater than Neutral condition (mean = 2.88, SE = 0.14),\emph{t} = 2.916, \emph{df} = 24, \emph{p} = 0.02, p-value adjusted by Tukey method, but the \emph{d} prime between Good and bad (mean = 3.03, SE = 0.142) (\emph{t} = 1.512, \emph{df} = 24, \emph{p} = 0.3034, p-value adjusted by Tukey method), bad and neutral (\emph{t} = 1.599, \emph{df} = 24, \emph{p} = 0.2655, p-value adjusted by Tukey method) were not significant.
+
+\hypertarget{reaction-times.}{%
+\subparagraph{Reaction times.}\label{reaction-times.}}
+
+The results of reaction times of matchness trials showed similar pattern as the \emph{d} prime data.
+
+We found intercation between Matchness and Valence (\(F(1.97, 45.20) = 20.45\), \(\mathit{MSE} = 450.47\), \(p < .001\), \(\hat{\eta}^2_G = .021\)) and then analyzed the matched trials and mismatched trials separately, as in experiment 2. For matched trials, we found the effect of valence \(F(1.97, 45.25) = 32.37\), \(\mathit{MSE} = 522.42\), \(p < .001\), \(\hat{\eta}^2_G = .078\). For non-matched trials, there was no significant effect of Valence (\(F(1.77, 40.67) = 0.35\), \(\mathit{MSE} = 242.15\), \(p = .679\), \(\hat{\eta}^2_G = .000\)). Post-hoc \emph{t}-tests revealed that shapes associated with Good Person (mean = 550, SE = 13.8) were responded faster than Neutral-Person (501, SE = 14.7), (\emph{t}(24) = -5.171, \emph{p} = 0.0001) and Bad Person (523, SE = 16.3), \emph{t}(24) = -8.137, \emph{p} \textless{} 0.0001)., and Neutral is faster than Bad-Person condition (\emph{t}(32) = -3.282, \emph{p} = 0.0085).
+
+\hypertarget{bglm-1}{%
+\paragraph{BGLM}\label{bglm-1}}
+
+\hypertarget{signal-detection-theory-analysis-of-accuracy-3}{%
+\subparagraph{Signal detection theory analysis of accuracy}\label{signal-detection-theory-analysis-of-accuracy-3}}
+
+\hypertarget{reaction-time-3}{%
+\subparagraph{Reaction time}\label{reaction-time-3}}
+
+\begin{figure}
+\centering
+\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/plot-exp6a-BGLM-1.pdf}
+\caption{\label{fig:plot-exp6a-BGLM}Exp1b: Results of Bayesian GLM analysis.}
+\end{figure}
+
+\hypertarget{part-2-interaction-between-valence-and-identity}{%
+\subsection{Part 2: interaction between valence and identity}\label{part-2-interaction-between-valence-and-identity}}
+
+In this part, we report four experiments that aimed at testing whether the positivity effect found in the previous experiment can be modulated by the self-referential processing.
+
+\hypertarget{experiment-3a}{%
+\subsection{Experiment 3a}\label{experiment-3a}}
+
+To examine the modulation effect of positive valence was an intrinsic, self-referential process, we designed study 3. In this study, moral valence was assigned to both self and a stranger. We hypothesized that the modulation effect of moral valence will be stronger for the self than for a stranger.
+
+\hypertarget{method-4}{%
+\subsubsection{Method}\label{method-4}}
+
+\hypertarget{participants-5}{%
+\paragraph{Participants}\label{participants-5}}
+
+38 college students (15 female, age = 21.92 \(\pm\) 2.16) participated in experiment 3a. All of them were right-handed, and all had normal or correted-to-normal vision. Informed consent was obtained from all participants prior to the experiment according to procedures approved by a local ethics committee. One female and one male student did not finish the experiment, and 1 participants' data were excluded from analysis because less than 60\% overall accuracy, remains 35 participants (13 female, age = 22.11 \(\pm\) 2.13).
+
+\hypertarget{design}{%
+\paragraph{Design}\label{design}}
+
+Study 3a combined moral valence with self-relevance, hence the experiment has a 2 × 3 × 2 within-subject design. The first variable was self-relevance, include two levels: self-relevance vs.~stranger-relevance; the second variable was moral valence, include good, neutral and bad; the third variable was the matching between shape and label: match vs.~nonmatch.
+
+\hypertarget{stimuli-1}{%
+\paragraph{Stimuli}\label{stimuli-1}}
+
+The stimuli used in study 3a share the same parameters with experiment 1 \& 2. The differences was that we used six shapes: triangle, square, circle, trapezoid, diamond, regular pentagon, and six labels: good self, neutral self, bad self, good person, bad person, and neutral person. To match the concreteness of the label, we asked participant to chosen an unfamiliar name of their own gender to be the stranger.
+
+\hypertarget{procedure-5}{%
+\paragraph{Procedure}\label{procedure-5}}
+
+After being fully explained and signed the informed consent, participants were instructed to chose a name that can represent a stranger with same gender as the participant themselves, from a common Chinese name pool. Before experiment, the experimenter explained the meaning of each label to participants. For example, the \enquote{good self} mean the morally good side of themselves, them could imagine the moment when they do something's morally applauded, \enquote{bad self} means the morally bad side of themselves, they could also imagine the moment when they doing something morally wrong, and \enquote{neutral self} means the aspect of self that does not related to morality, they could imagine the moment when they doing something irrelevant to morality. In the same sense, the \enquote{good other}, \enquote{bad other}, and \enquote{neutral other} means the three different aspects of the stranger, whose name was chosen before the experiment. Then, the experiment proceeded as study 1a. Each participant finished 6 blocks, each have 120 trials. The sequence of trials was pseudo-randomized so that there are 10 matched trials for each condition and 10 non-matched trials for each condition (good self, neutral self, bad self, good other, neutral other, bad other) for each block.
+
+\hypertarget{data-analysis-6}{%
+\paragraph{Data Analysis}\label{data-analysis-6}}
+
+Data analysis followed strategies described in the general method section. Reaction times and \emph{d} prime data were analyzed as in study 1 and study 2, except that one more within-subject variable (i.e., self-relevance) was included in the analysis.
+
+\hypertarget{results-5}{%
+\subsubsection{Results}\label{results-5}}
+
+\hypertarget{nhst-3}{%
+\paragraph{NHST}\label{nhst-3}}
+
+\begin{figure}
+\centering
+\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/ex3a-dprime-rt-1.pdf}
+\caption{\label{fig:ex3a-dprime-rt}RT and \emph{d} prime of Experiment 3a.}
+\end{figure}
+
+Figure \ref{fig:ex3a-dprime-rt} shows \emph{d} prime and reaction times of experiment 3a. Less than 5\% correct trials with less than 200ms reaction times were excluded.
+
+\hypertarget{d-prime-4}{%
+\subparagraph{d prime}\label{d-prime-4}}
+
+There was evidence for the main effect of valence, \(F(1.89, 64.37) = 11.09\), \(\mathit{MSE} = 0.23\), \(p < .001\), \(\hat{\eta}^2_G = .039\), and main effect of self-relevance, \(F(1, 34) = 3.22\), \(\mathit{MSE} = 0.54\), \(p = .082\), \(\hat{\eta}^2_G = .015\), as well as the interaction, \(F(1.79, 60.79) = 3.39\), \(\mathit{MSE} = 0.43\), \(p = .045\), \(\hat{\eta}^2_G = .022\).
+
+We then conducted separated ANOVA for self-referential and other-referential trials. The valence effect was shown for the self-referential conditions, \(F(1.65, 56.25) = 13.98\), \(\mathit{MSE} = 0.31\), \(p < .001\), \(\hat{\eta}^2_G = .119\). Post-hoc test revealed that the Good-Self condition (1.97 \(\pm\) 0.14) was with greater \emph{d} prime than Netural condition (1.41 \(\pm\) 0.12, \emph{t}(34) = 4.505, \emph{p} = 0.0002), and Bad-self condition (1.43 \(\pm\) 0.102), \emph{t}(34) = 3.856, \emph{p} = 0.0014. There was difference between neutral and bad condition, \emph{t}(34) = -0.238, \emph{p} = 0.9694. However, no effect of valence was found for the other-referential condition \(F(1.98, 67.36) = 0.38\), \(\mathit{MSE} = 0.35\), \(p = .681\), \(\hat{\eta}^2_G = .004\).
+
+\hypertarget{reaction-time-4}{%
+\subparagraph{Reaction time}\label{reaction-time-4}}
+
+We found interaction between Matchness and Valence (\(F(1.98, 67.44) = 26.29\), \(\mathit{MSE} = 730.09\), \(p < .001\), \(\hat{\eta}^2_G = .025\)) and then analyzed the matched trials and nonmatch trials separately, as in previous experiments.
+
+For the match trials, we found that the interaction between identity and valence, \(F(1.72, 58.61) = 3.89\), \(\mathit{MSE} = 2,750.19\), \(p = .032\), \(\hat{\eta}^2_G = .019\), as well as the main effect of valence \(F(1.98, 67.34) = 35.76\), \(\mathit{MSE} = 1,127.25\), \(p < .001\), \(\hat{\eta}^2_G = .079\), but not the effect of identity \(F(1, 34) = 0.20\), \(\mathit{MSE} = 3,507.14\), \(p = .660\), \(\hat{\eta}^2_G = .001\). As for the \emph{d} prime, we separated analyzed the self-referential and other-referential trials. For the Self-referential trials, we found the main effect of valence, \(F(1.80, 61.09) = 30.39\), \(\mathit{MSE} = 1,584.53\), \(p < .001\), \(\hat{\eta}^2_G = .159\); for the other-referential trials, the effect of valence is weaker, \(F(1.86, 63.08) = 2.85\), \(\mathit{MSE} = 2,224.30\), \(p = .069\), \(\hat{\eta}^2_G = .024\). We then focused on the self conditions: the good-self condition (713 \(\pm\) 12) is faster than neutral- (776 \(\pm\) 11.8), \emph{t}(34) = -7.396, \emph{p} \textless{} .0001 , and bad-self (772 \(\pm\) 10.1) conditions, \emph{t}(34) = -5.66, \emph{p} \textless{} .0001. But there is not difference between neutral- and bad-self conditions, \emph{t}(34) = 0.481, \emph{p} = 0.881.
+
+For the nonmatch trials, we didn't found any strong effect: identity, \(F(1, 34) = 3.43\), \(\mathit{MSE} = 660.02\), \(p = .073\), \(\hat{\eta}^2_G = .004\), valence \(F(1.89, 64.33) = 0.40\), \(\mathit{MSE} = 444.10\), \(p = .661\), \(\hat{\eta}^2_G = .001\), or interaction between the two \(F(1.94, 66.02) = 2.42\), \(\mathit{MSE} = 817.35\), \(p = .099\), \(\hat{\eta}^2_G = .007\).
+
+\hypertarget{bglm-2}{%
+\paragraph{BGLM}\label{bglm-2}}
+
+\hypertarget{signal-detection-theory-analysis-of-accuracy-4}{%
+\subparagraph{Signal detection theory analysis of accuracy}\label{signal-detection-theory-analysis-of-accuracy-4}}
+
+We found that the \emph{d} prime is greater when shapes were associated with good self condition than with neutral self or bad self, but shapes associated with bad self and neutral self didn't show differences. comparing the self vs other under three condition revealed that shapes associated with good self is greater than with good other, but with a weak evidence. In contrast, for both neutral and bad valence condition, shapes associated with other had greater \emph{d} prime than with self.
+
+\hypertarget{reaction-time-5}{%
+\subparagraph{Reaction time}\label{reaction-time-5}}
+
+\begin{figure}
+\centering
+\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/plot-exp3a-BGLM-1.pdf}
+\caption{\label{fig:plot-exp3a-BGLM}Exp3a: Results of Bayesian GLM analysis.}
+\end{figure}
+
+In reaction times, we found that same trends in the match trials as in the \emph{d} prime: while the shapes associated with good self was greater than with good other (log mean diff = -0.02858, 95\%HPD{[}-0.070898, 0.0154{]}), the direction is reversed for neutral and negative condition. see Figure \ref{fig:plot-exp3a-BGLM}
+
+\hypertarget{hddm-4}{%
+\subsubsection{HDDM}\label{hddm-4}}
+
+\begin{figure}
+\centering
+\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/plot-exp3a-HDDM-1.pdf}
+\caption{\label{fig:plot-exp3a-HDDM}Exp3a: Results of HDDM.}
+\end{figure}
+
+We fitted our data with HDDM, using the response-coding (also see Hu et al., 2020). We estimated separate drift rate (\(v\)), non-decision time (\(T_{0}\)), and boundary separation (\(a\)) for each condition. We found that the shapes tagged with good person has higher drift rate and higher boundary separation than shapes tagged with both neutral and bad person. Also, the shapes tagged with neutral person has a higher drift rate than shapes tagged with bad person, but not for the boundary separation. Finally, we found that shapes tagged with bad person had longer non-decision time (see figure \ref{fig:plot-exp3a-HDDM})).
+
+\hypertarget{results-6}{%
+\section{Results}\label{results-6}}
 
 \hypertarget{effect-of-moral-valence}{%
 \subsection{Effect of moral valence}\label{effect-of-moral-valence}}
